--- a/index.html
+++ b/index.html
@@ -50,26 +50,35 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead d-flex">
-    <form>
-      <div class="col-md-4 col-md-offset-4">
-        <div class="form-group w-25">
-          <label for="username">username</label>
-          <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="e.g. Rafael Reif">
-        </div>
-        <div class="form-group w-25">
-          <label for="gameId">game id</label>
-          <input type="text" class="form-control" id="gameId" placeholder="XXXX">
-        </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
-    </form>
-    <div class="overlay"></div>
+  <header class="masthead d-inline-flex justify-content-center align-items-center">
+    <div class="d-flex">
+      <!-- Form -->
+      <form class="form" action="" method="post">
+          <div class="form-group d-flex">
+            <h1>whomst.io</h1>
+          </div>
+          <!-- Input fields -->
+          <div class="d-flex justify-content-center" >username</div>
+          <div class="form-group d-flex-column justify-content-center">
+              <input type="text" class="form-control username" id="username" placeholder="e.g Rafael Reif" name="username">
+          </div>
+          <div class="d-flex justify-content-center" >
+            <button type="submit" class="btn btn-primary btn-customized justify-content-center">create game</button>
+          </div>
+
+          <div class="d-flex justify-content-center" >game id</div>
+          <div class="form-group d-flex">
+              <input type="password" class="form-control username" id="password" placeholder="XXXX" name="password">
+          </div>
+          <div class="d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary btn-customized">join game</button>
+          </div>
+          
+      </form>
+      <!-- Form end -->
+  </div>
   </header>
+
 
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
